# axum-pg-template

./: Cargo.toml  README.md
.cargo/: config.toml
crates/web/: Cargo.toml
crates/web/examples/: quick_dev.rs
crates/web/sql/dev_initial/: 00-recreate-db.sql  01-create-scheme.sql
crates/web/src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs  mw_auth.rs
crates/web/src/_dev_utils/: dev_db.rs  mod.rs
crates/web/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
crates/web/src/ctx/: error.rs  mod.rs
crates/web/src/log/: mod.rs
crates/web/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
crates/web/src/model/store/: error.rs  mod.rs
crates/web/src/routes/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
crates/web/src/routes/rpc/: mod.rs  task_rpc.rs
crates/web/src/utils/: error.rs  mod.rs
crates/web/tests/: quick_dev.rs
crates/web/web-folder/: index.html
requests/: get_hello.http  post_api_login.http  tickets.http
