[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["macros"] }
lazy-regex = "3.0.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
strum_macros = "0.25.3"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.7"
